[package]
name    = "chb4"
version = "0.1.0"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
panic = 'abort' # abort on panic instead of unwinding

[lib]
name = "chb4"
path = "src/chb4/lib.rs"

[[bin]]
name = "chb4"
doc = false
test = false

[dependencies]
bytes             = { version = "0.5", features = ["serde"] }
chrono            = "0.4"
config            = { version = "0.10", default-features = false, features = ["toml"] }
diesel            = { version = "1.0", default-features = false, features = ["mysql", "chrono", "r2d2"] }
diesel_migrations = "1.4"
flexi_logger      = "0.14"
futures-util      = "0.3"
hyper             = "0.13"
log               = "0.4"
r2d2              = "0.8"
rand              = { version = "0.7", features = ["log"] }
regex             = "1"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
snafu             = "0.6"
tokio             = { version = "0.2", default-features = false, features = ["macros"] }
twitchchat        = "0.8"
yansi             = "0.5"
