[package]
name    = "chb4"
version = "0.1.0"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
panic = 'abort' # abort on panic instead of unwinding

[lib]
name = "chb4"
path = "src/chb4/lib.rs"

[[bin]]
name = "chb4"
doc = false
test = false

[dependencies]
async-trait         = "0.1"
bytes               = { version = "0.5", features = ["serde"] }
chrono              = "0.4"
config              = { version = "0.10", default-features = false, features = ["toml"] }
diesel              = { version = "1.4", default-features = false, features = ["postgres", "chrono", "r2d2"] }
diesel_migrations   = "1.4"
evalexpr            = "5"
flexi_logger        = "0.15"
futures-delay-queue = "0.2"
futures-executor    = "0.3"
futures-util        = "0.3"
humantime           = "2"
hyper               = "0.13"
lazy_static         = "1.4"
log                 = "0.4"
nom                 = "5"
r2d2                = "0.8"
rand                = { version = "0.7", features = ["log"] }
regex               = "1"
rustls              = "0.17"
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
snafu               = "0.6"
tokio               = { version = "0.2", default-features = false, features = ["macros"] }
twitchchat          = { version = "0.10", default-features = false, features = ["async", "tokio_rustls"] }
yansi               = "0.5"
