cargo-features = ["strip"]

[package]
name    = "chb4"
version = "0.2.1"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"
default-run = "chb4-bot"

[[bin]]
name = "chb4-bot"

[[bin]]
name = "chb4-web"

[profile.release]
lto = true
strip = "debuginfo"

[dependencies]
anyhow              = "1.0"
async-trait         = "0.1"
bytes               = { version = "0.5", features = ["serde"] }
chrono              = "0.4"
config              = { version = "0.10", default-features = false, features = ["toml"] }
diesel              = { version = "1.4", default-features = false, features = ["postgres", "chrono", "r2d2"] }
diesel_migrations   = "1.4"
evalexpr            = "5"
flexi_logger        = "0.15"
futures-delay-queue = "0.2"
futures-executor    = "0.3"
futures-util        = "0.3"
humantime           = "2"
hyper               = "0.13"
lazy_static         = "1.4"
log                 = "0.4"
lru                 = "0.4"
nom                 = "5"
procinfo            = "0.4"
r2d2                = "0.8"
rand                = { version = "0.7", features = ["log"] }
regex               = "1"
rustls              = "0.17"
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
snafu               = "0.6"
thiserror           = "1.0"
time                = "0.1"
tokio               = { version = "0.2", default-features = false, features = ["macros", "signal"] }
twitchchat          = { version = "0.10", default-features = false, features = ["async", "tokio_rustls"] }
yansi               = "0.5"
systemstat          = "0.1"
chrono-tz           = "0.5"
